--- a/scss/style.scss
+++ b/scss/style.scss
@@ -776,6 +776,98 @@ body {
     }
   }
 }
+
 //section footer end
+.popup-content2 {
+  z-index: 10;
+  position: fixed;
+  top: 100px;
+  right: 30px;
+
+  .popup-content {
+  }
+  &:hover {
+    cursor: pointer;
+
+    .btn_popup2 {
+      display: block;
+    }
+  }
+  .btn_popup2_text {
+    text-align: center;
+    color: #e4b800;
+    font-size: 18px;
+  }
+
+  .btn_popup2 {
+    display: none;
+    width: 20px;
+    height: 20px;
+    background: #0c60c9;
+    background-image: url(../img/icon-krest.png);
+    background-size: cover;
+    border: none;
+    border-radius: 50%;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+.pop-show {
+  display: none;
+}
+.pop-show2 {
+  display: block !important;
+}
+
+.popup-content {
+  position: fixed;
+  top: 100px;
+  right: 30px;
+  z-index: 100;
+  display: none;
+}
+.call-me {
+  width: 70px;
+
+  // .call-me__text
+  .btn_popup {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: none;
+    background: #0c60c9;
+    background-image: url(../img/icon-krest.png);
+    background-size: cover;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  &__text {
+    text-align: center;
+    color: #e4b800;
+    margin-bottom: 15px;
+  }
+
+  // .call-me__list
+
+  &__list {
+    ul {
+      padding: 0;
+      list-style: none;
+      margin: 0;
+      margin: 0 auto;
+      width: 40px;
+      li {
+      }
+    }
+    a {
+    }
+    img {
+      border-radius: 50%;
+    }
+  }
+}
 
 @import "media";
