--- a/customForm/scss/style.scss
+++ b/customForm/scss/style.scss
@@ -12,7 +12,7 @@ body {
   box-sizing: inherit;
 }
 
-form {
+.form {
   margin: 10px auto;
   padding: 30px;
   max-width: 700px;
@@ -50,6 +50,9 @@ form {
   flex-direction: column;
   align-items: center;
   justify-items: center;
+  label {
+    color: #429aff;
+  }
 }
 .inputcustom {
   width: 100%;
@@ -71,6 +74,7 @@ form {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  color: #737373;
   margin-bottom: 20px;
   a {
     color: #737373;
@@ -78,6 +82,38 @@ form {
     &:hover {
       color: #4a3d3d;
       transition: 0.5s;
+    }
+  }
+}
+.inputBox {
+  width: 20px !important;
+  height: 20px;
+}
+.btn-block {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.btn-start {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  input {
+    color: #fff;
+    width: 200px;
+    height: 40px;
+    border-radius: 5px;
+    padding: 5px;
+    margin-right: 10px;
+    border: 2px solid #429aff;
+    background-color: #429aff;
+
+    margin-bottom: 20px;
+    outline: none;
+    &:hover {
+      cursor: pointer;
+      background-color: hsl(204, 100%, 54%);
     }
   }
 }
