--- a/customForm/scss/_media.scss
+++ b/customForm/scss/_media.scss
@@ -1,9 +1,27 @@
 @media (max-width: 570px) {
   .ref {
     a {
-      margin-bottom: 5px;
+      margin-top: 10px;
+      margin-left: 0;
+      margin-bottom: 30px;
     }
     flex-direction: column;
     align-items: flex-start;
+  }
+  .technology-wrap {
+    padding-left: 10px;
+  }
+}
+@media (max-width: 320px) {
+  .formWrap {
+    input {
+      font-size: 11px;
+    }
+  }
+  .title {
+    h2 {
+      font-size: 24px;
+    }
+    padding-left: 0;
   }
 }
