--- a/customForm/scss/style.scss
+++ b/customForm/scss/style.scss
@@ -71,12 +71,16 @@ body {
   color: hsl(204, 100%, 54%);
 }
 .ref {
+  padding-left: 20px;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  input {
+    margin-right: 10px;
+  }
   color: #737373;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   a {
+    margin-left: 20px;
     color: #737373;
     transition: 0.5s;
     &:hover {
@@ -116,5 +120,35 @@ body {
       background-color: hsl(204, 100%, 54%);
     }
   }
+}
+.colorCheckbox {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  input {
+    margin-left: 9px;
+    width: 30px;
+    height: 30px;
+  }
+}
+.technology-wrap {
+  padding-top: 30px;
+  padding-left: 30px;
+
+  width: 50%;
+  input {
+    display: flex;
+    margin-bottom: 0;
+    width: 29px;
+    height: 29px;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.technology-wrap__block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 @import "media";
