--- a/todo/src/index.module.scss
+++ b/todo/src/index.module.scss
@@ -13,12 +13,41 @@ body {
   margin: 0 auto;
 }
 .todo {
+  display: flex;
   width: 100%;
-  height: 500px;
+  min-height: 500px;
   &__sidebar {
     background-color: #f4f6f8;
     width: 300px;
     height: 100%;
     padding: 60px 20px;
+  }
+  &__tasks {
+    flex: 1;
+    padding: 60px;
+  }
+}
+.button {
+  background: #4dd599;
+  border-radius: 4px;
+  color: #fff;
+  border: 0;
+  padding: 10px 20px;
+  outline: none;
+  &:hover {
+    background: darken(#4dd599, 6%);
+  }
+  &:active {
+    background: darken(#4dd599, 10%);
+  }
+}
+.field {
+  background: #fff;
+  border: 1px solid #efefef;
+  box-sizing: border-box;
+  padding: 8px 12px;
+  width: 100%;
+  &:focus {
+    border-color: #dbdbdb;
   }
 }
